TODO: 
  - FStab: force fs_freq and fs_passno to be 0 with bind mounted fs
    (require re-work of warp mechanism)
  - remove warp registration mechanism (was premature optimisation)

2011-04-05 Dominique Dumont  <domi.dumont@free.fr> 1.240
    
    * Framework changes:
        * Most *.pm: replaced 'no Moose' by 'no Any::Moose' 
        
2011-04-05 Dominique Dumont  <domi.dumont@free.fr> 1.238
    
    * Framework changes:
        * Build.PL: removed dead code that cause downstream pacaking problems.
        * Model.pm: fix cosmetic issue with doc generation.
        
2011-04-04 Dominique Dumont  <domi.dumont@free.fr> 1.237
    
    * Framework changes:
        * added MouseX::NativeTraits dependency (fix RT #67196)
        * config-edit: fixed typo (fix RT #66403)
        * Value, Node, AnyId: use dclone to backup constructor parameters
        * Model: Correctly write author and copyright in doc (i.e not as ARRAY0x0...)
        * Yaml backend: fill full_dump option (did not work when set to 0)
    * Application changes:
        * dpkg control dependency: 
            - Dependency filtering mechanism uses source package name to find
              filter value in Meta. This makes more sense than using binary package
              name
              
2011-04-01 Dominique Dumont  <domi.dumont@free.fr> 1.236
    
    * Application changes:
        * dpkg control dependency: 
          - Dependency filtering mechanism now use dpkg meta 
            package_dependency_filter value (i.e. a user parameter).
            Debian_perl package will be filtered on lenny by default
            Filter mechanism can be overriden in a package by package basis
            See Debian::Dpkg::Meta config class for details. 
          - Warn if a package is unknown.
          - Accepts version specified with dpkg variables.
        * dpkg control and copyright: warn if dh-make-perl boilerplate is found
	* dpkg control: added Package-Type parameter (Peter Pentchev)