@@ -52,6 +52,7 @@ Test::More        = 0
 Test::Exception   = 0
 Test::Warn        = 0.11 ;-- tests fail with 0.08
 Test::Command     = 0.08 ; -- some tests fail with 0.01
+Test::Differences = 0
 Probe::Perl       = 0 
 Path::Class       = 0
 File::Slurp       = 0
